# Protoactor-cpp

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COMPILATION_STATUS.md  COMPLETION_REPORT.md  COMPLETION_STATUS_FINAL.md  COMPLETION_SUMMARY.md  CORE_FEATURES_COMPLETION_REPORT.md  CROSS_PLATFORM_GUIDE.md  CURRENT_STATUS.md  DEPENDENCIES.md  Dockerfile  FEATURE_COMPARISON_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_SUMMARY.md  GRPC_INTEGRATION_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_PROGRESS_UPDATE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  INSTALL_DEPENDENCIES.md  LINUX_BUILD_SUMMARY.md  MISSING_FEATURES_REPORT.md  README.md  README_CROSS_PLATFORM.md  README_DEPENDENCIES.md  REMOTE_IMPLEMENTATION_STATUS.md  THIRD_PARTY_LIBRARIES.md  TODO_LIST.md  architecture.md  build.sh  conanfile.txt  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  perf.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK.md  BUILD_AND_REMOTE.md  BUILD_GUIDE.md  COMPARISON.md  COMPARISON_AND_MIGRATION.md  FRAMEWORK_COMPARISON.md  GAP_ANALYSIS_VS_PROTOACTOR_GO.md  MIGRATION_GUIDE.md  PERF_TESTS.md  README.md  REMOTE_GUIDE.md  TESTING.md
examples/: README.md  behavior_example.cpp  cluster_example.cpp  hello_world.cpp  middleware_example.cpp  perf_benchmark.cpp  persistence_example.cpp  pubsub_example.cpp  remote_example.cpp  router_example.cpp  supervision_example.cpp
include/internal/: log.h  mailbox.h  pidset.h  platform.h  process.h  process_registry.h  stream.h
include/internal/actor/: actor_context.h  actor_process.h  captured_context.h  deadletter.h  deduplication_context.h  guardian.h  middleware_chain.h  new_pid.h  root_context.h
include/internal/cluster/: cluster_provider.h  cluster_topology.h  gossip.h  identity_lookup.h  member_list.h  pid_cache.h  pubsub.h  pubsub_delivery.h
include/internal/remote/: activator_actor.h  blocklist.h  endpoint_manager.h  endpoint_reader.h  endpoint_watcher.h  endpoint_writer.h  grpc_service.h  messages.h  remote_process.h  serializer.h
include/internal/router/: router_group.h
include/internal/scheduler/: timer.h
include/protoactor/: actor.h  actor_context.h  actor_process.h  actor_system.h  behavior.h  captured_context.h  config.h  context.h  deadletter.h  deduplication_context.h  dispatcher.h  extensions.h  guardian.h  mailbox.h  message_batch.h  messages.h  middleware_chain.h  new_pid.h  persistence.h  pidset.h  process.h  process_registry.h  props.h  root_context.h  supervision.h  testprobe.h  thread_pool.h  timer.h
include/protoactor/cluster/: cluster.h  cluster_provider.h  cluster_topology.h  gossip.h  gossiper.h  identity_lookup.h  member.h  pid_cache.h  pubsub.h  pubsub_delivery.h
include/protoactor/internal/: mailbox.h  pidset.h  process.h  process_registry.h  queue.h  stream.h
include/protoactor/internal/actor/: actor_context.h  actor_process.h  captured_context.h  deadletter.h  deduplication_context.h  guardian.h  middleware_chain.h  new_pid.h  root_context.h
include/protoactor/internal/cluster/: cluster_provider.h  cluster_topology.h  gossip.h  identity_lookup.h  member_list.h  pid_cache.h  pubsub.h  pubsub_delivery.h
include/protoactor/internal/metrics/: metrics.h
include/protoactor/internal/remote/: activator_actor.h  endpoint_manager.h  endpoint_reader.h  endpoint_watcher.h  endpoint_writer.h  (+3 more)
include/protoactor/queue/: priority_queue.h
include/protoactor/remote/: activator_actor.h  blocklist.h  endpoint_manager.h  endpoint_reader.h  endpoint_watcher.h  endpoint_writer.h  grpc_service.h  messages.h  remote.h  remote_process.h
include/protoactor/router/: router.h  router_group.h
include/protoactor/stream/: stream.h
perf_results/: aggregate_summary.csv  summary.csv
perf_results/run_1_a1_m100_r1/: stats.csv
perf_results/run_2_a1_m100_r2/: stats.csv
perf_results/run_3_a1_m1000_r1/: stats.csv
perf_results/run_4_a1_m1000_r2/: stats.csv
perf_results/run_5_a10_m100_r1/: stats.csv
perf_results/run_6_a10_m100_r2/: stats.csv
perf_results/run_7_a10_m1000_r1/: stats.csv
perf_results/run_8_a10_m1000_r2/: stats.csv
proto/: actor.proto  remote.proto
scripts/: ci_tests.sh  coverage_report.sh  run_unit_tests.sh
scripts/perf/: README.md  run_perf_tests.sh
src/actor/: actor_context.cpp  actor_process.cpp  actor_system.cpp  behavior.cpp  captured_context.cpp  config.cpp  deadletter.cpp  deduplication_context.cpp  dispatcher.cpp  eventstream.cpp  extensions.cpp  future.cpp  guardian.cpp  mailbox.cpp  messages.cpp  middleware_chain.cpp  new_pid.cpp  pid.cpp  pidset.cpp  platform.cpp  process_registry.cpp  props.cpp  queue.cpp  root_context.cpp  supervision.cpp  thread_pool.cpp
src/cluster/: cluster.cpp  cluster_provider.cpp  gossip.cpp  gossiper.cpp  identity_lookup.cpp  member.cpp  member_list.cpp  pid_cache.cpp  pubsub.cpp  pubsub_delivery.cpp
src/metrics/: metrics.cpp
src/persistence/: persistence.cpp
src/queue/: priority_queue.cpp
src/remote/: activator_actor.cpp  blocklist.cpp  endpoint_manager.cpp  endpoint_reader.cpp  endpoint_watcher.cpp  endpoint_writer.cpp  grpc_service.cpp  json_serializer.cpp  proto_serializer.cpp  remote.cpp  remote_process.cpp  serializer.cpp
src/router/: router.cpp  router_group.cpp
src/scheduler/: timer.cpp
src/stream/: stream.cpp
src/testkit/: testprobe.cpp
tests/: README.md  TESTING.md  test_common.h
tests/functional/: README.md  actor_integration_test.cpp  performance_test.cpp
tests/integration/: remote_cluster_integration_test.cpp
tests/scripts/: ci_tests.sh  coverage_report.sh  run_unit_tests.sh
tests/scripts/perf/: README.md  aggregate_results.py  run_perf_tests.sh
tests/unit/: README.md  cluster_test.cpp  config_test.cpp  dispatcher_test.cpp  eventstream_test.cpp  extensions_test.cpp  messages_test.cpp  middleware_test.cpp  persistence_test.cpp  pid_test.cpp  pidset_test.cpp  platform_test.cpp  priority_queue_test.cpp  props_test.cpp  queue_test.cpp  remote_test.cpp  router_test.cpp  supervision_test.cpp  thread_pool_test.cpp
(+2 files in other folders)
